# QtMqttSqlBridge

./: .gitignore  CMakeLists.txt
Test/: CMakeLists.txt  Main.qml  main.cpp  mqttdbtestbridge.cpp  mqttdbtestbridge.h  mqttmanager.cpp  mqttmanager.h  sqlmanagerwrapper.cpp  sqlmanagerwrapper.h
dbManager/: CMakeLists.txt  dbManager_global.h  dbmanager.cpp  dbmanager.h
